tests/fixtures/invalid/bool_lshift_str.py
# Cannot left shift Bool and Str
x: bool = True << "hello"
